# MyAgen

./: README.md
rs-mcp-agent/: .gitignore  Makefile  README.md  pyproject.toml  start_rs_mcp.bat
rs-mcp-agent/.codex/: config.toml.example
rs-mcp-agent/configs/: analysis_rules.yaml  models.yaml  service.yaml  tasks.yaml
rs-mcp-agent/configs/class_maps/: building_change.yaml  landcover.yaml  vehicle_ship_aircraft.yaml
rs-mcp-agent/docs/: api.md  audit_report.md  cherry_studio_mcp.md  codex_mcp.md  example_prompts.md  final_release_check.md  install_change_detection.md  install_detection.md  install_models.md  install_openmmlab.md  install_segmentation.md  install_super_resolution.md  mcp_tools.md  model_weights.md  multi_conda_workers.md  multi_env_runners.md  project_structure.md  quickstart.md  troubleshooting.md
rs-mcp-agent/rs_mcp/: __init__.py  client.py  server.py  tools.py
rs-mcp-agent/rs_service/: __init__.py  __main__.py  api.py  cli.py  job_store.py  jobs.py  registry.py  schemas.py  services.py  settings.py
rs-mcp-agent/rs_service/adapters/: __init__.py  base.py  basicsr_adapter.py  external_subprocess_adapter.py  fake.py  fake_change_adapter.py  fake_detection_adapter.py  fake_instance_adapter.py  fake_segmentation_adapter.py  fake_super_resolution_adapter.py  mmagic_adapter.py  mmdet_adapter.py  mmrotate_adapter.py  mmseg_adapter.py  opencd_adapter.py  placeholders.py  sahi_adapter.py  swinir_adapter.py  ultralytics_adapter.py
rs-mcp-agent/rs_service/analysis/: __init__.py  change_summary.py  conclusion_engine.py  quality_checks.py  report_builder.py  sr_metrics.py  statistics.py
rs-mcp-agent/rs_service/core/: __init__.py  alignment.py  geometry.py  georef.py  manifest.py  raster.py  raster_io.py  stitching.py  tiling.py  vector.py
rs-mcp-agent/rs_service/pipelines/: __init__.py  base.py  change_detection.py  detection.py  indices.py  oriented_detection.py  quality.py  report.py  segmentation.py  spectral_indices.py  statistics.py  super_resolution.py
rs-mcp-agent/rs_service/workers/: __init__.py  common.py  fake_external_infer.py  mmdet_infer.py  mmrotate_infer.py  mmseg_infer.py  opencd_infer.py  sahi_yolo_infer.py  swinir_infer.py  yolo_infer.py
rs-mcp-agent/scripts/: create_synthetic_geotiff.py  dev_check.py  diagnose_yolo_subprocess.py  download_weights.py  print_mcp_config.py  run_api.py  run_mcp.py  smoke_test.py  smoke_test_subprocess.py
rs-mcp-agent/tests/: test_api.py  test_change_detection.py  test_conclusion_engine.py  test_core.py  test_end_to_end.py  test_external_subprocess_adapter.py  test_foundation.py  test_georef.py  test_indices.py  test_mcp_tools.py  test_mmseg_adapter_import.py  test_openmmlab_adapters.py  test_pipelines.py  test_quality_checks.py  test_raster_io.py  test_report.py  test_statistics.py  test_stitching.py  test_super_resolution.py  test_tiling.py  test_ultralytics_adapter_import.py
