[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-mcp-agent"
version = "0.1.0"
description = "Remote sensing image processing FastAPI service and stdio MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rs-mcp-agent maintainers" }]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "rasterstats>=0.19",
  "pyproj>=3.6",
  "fiona>=1.9",
  "mcp>=1.2",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
ml = [
  "ultralytics>=8.2",
  "sahi>=0.11",
  "mmengine>=0.10",
  "mmcv>=2.1",
  "mmdet>=3.3",
  "mmsegmentation>=1.2",
  "mmrotate>=1.0",
  "opencd>=1.1",
  "basicsr>=1.4",
  "mmagic>=1.2"
]
prompt-segmentation = [
  "samgeo>=0.12",
  "groundingdino-py>=0.4"
]
dev = [
  "pytest>=8",
  "httpx>=0.27"
]

[project.scripts]
rs-service = "rs_service.api:main"
rs-mcp = "rs_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rs_service*", "rs_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
