[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-mcp-agent"
version = "0.1.0"
description = "Remote sensing image processing FastAPI service and stdio MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rs-mcp-agent maintainers" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "numpy>=1.24",
  "pillow>=10.0",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pandas>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "pytest>=8",
  "rasterstats>=0.19",
  "pyproj>=3.6",
  "fiona>=1.9",
  "mcp>=1.2",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
detection = [
  "ultralytics>=8.2",
  "sahi>=0.11"
]
torch = [
  "torch>=2.1",
  "torchvision>=0.16"
]
openmmlab = [
  "mmengine>=0.10",
  "mmcv>=2.1",
  "mmdet>=3.3",
  "mmsegmentation>=1.2",
  "mmrotate>=1.0",
  "basicsr>=1.4",
  "mmagic>=1.2"
]
ml = [
  "ultralytics>=8.2",
  "sahi>=0.11",
  "torch>=2.1",
  "torchvision>=0.16",
  "mmengine>=0.10",
  "mmcv>=2.1",
  "mmdet>=3.3",
  "mmsegmentation>=1.2",
  "mmrotate>=1.0",
  "basicsr>=1.4",
  "mmagic>=1.2"
]
prompt-segmentation = [
  "samgeo>=0.12",
  "groundingdino-py>=0.4"
]
dev = [
  "pytest>=8",
  "httpx>=0.27"
]

[project.scripts]
rs-service = "rs_service.cli:app"
rs-mcp = "rs_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rs_service*", "rs_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
